loader - fix some problems - improve dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -33,20 +33,20 @@
   }
 
   .dark {
-    --background: 0 0% 0%;
+    --background: 0 -8% 8%;
     --foreground: 0 25% 97%;
-    --card: 0 0% 0%;
+    --card: 0 -10% 10%;
     --card-foreground: 0 25% 97%;
-    --popover: 0 0% 0%;
+    --popover: 0 -10% 10%;
     --popover-foreground: 0 25% 97%;
     --primary: 239 40% 74%;
-    --primary-foreground: 0 0% 0%;
+    --primary-foreground: 0 -10% 10%;
     --secondary: 143 22% 28%;
     --secondary-foreground: 0 25% 97%;
     --muted: 0 0% 80%;
     --muted-foreground: 0 25% 97%;
     --accent: 187 78% 71%;
-    --accent-foreground: 0 0% 0%;
+    --accent-foreground: 0 -10% 10%;
     --destructive: 0 62% 30%;
     --destructive-foreground: 0 25% 10%;
     --border: 0 0% 15%;
